modules/tf_network/05-acls.tf
# Public Network

resource "aws_network_acl" "public" {
  vpc_id = aws_vpc.main.id
  subnet_ids = aws_subnet.public.*.id
}

resource "aws_network_acl_rule" "https_inbound"{
  network_acl_id = aws_network_acl.public.*.id
  rule_number    = 100
  egress         = false
  protocol       = "https"
  rule_action    = "allow"
  cidr_block     = "0.0.0.0/0"
  from_port      = 443
  to_port        = 443
}

resource "aws_network_acl_rule" "https_outbound"{
  network_acl_id = aws_network_acl.public.*.id
  rule_number    = 101
  egress         = true
  protocol       = "https"
  rule_action    = "allow"
  cidr_block     = "0.0.0.0/0"
  from_port      = 443
  to_port        = 443
}

resource "aws_network_acl_rule" "ssh_inbound"{
  network_acl_id = aws_network_acl.public.*.id
  rule_number    = 102
  egress         = false
  protocol       = "tcp"
  rule_action    = "allow"
  cidr_block     = "103.44.33.69/32"
  from_port      = 22
  to_port        = 22
}

resource "aws_network_acl_rule" "ssh_outbound"{
  network_acl_id = aws_network_acl.public.*.id
  rule_number    = 103
  egress         = true
  protocol       = "tcp"
  rule_action    = "allow"
  cidr_block     = "0.0.0.0/0"
  from_port      = 22
  to_port        = 22
}

# Private Network

resource "aws_network_acl" "private" {
  vpc_id = aws_vpc.main.id
  subnet_ids = aws_subnet.private.*.id
}
